# cilium-rs

./: Cargo.toml  flake.nix  generate_cilium_crate
src/: ciliumcidrgroups.rs  ciliumclusterwidenetworkpolicies.rs  ciliumendpoints.rs  ciliumexternalworkloads.rs  ciliumidentities.rs  ciliuml2announcementpolicies.rs  ciliumloadbalancerippools.rs  ciliumnetworkpolicies.rs  ciliumnodeconfigs.rs  ciliumnodes.rs  ciliumpodippools.rs  lib.rs
